# klvk

./: .clang-tidy  klvk.package.json  readme.md
examples/compute_shader/: CMakeLists.txt  compile_shaders.cmake  klvk_compute_shader_example.module.json
examples/compute_shader/code/private/: compute_shader_example.cpp
examples/compute_shader/content/shaders/compute_shader/: bodies.vert  particles.frag  particles.vert
examples/compute_shader/shaders/compute_shader/: bodies.vert  particles.comp  particles.shader.json  particles.vert
examples/curve_fractal/: CMakeLists.txt  compile_shaders.cmake  klvk_curve_fractal_example.module.json
examples/curve_fractal/code/private/: curve_fractal_example.cpp
examples/falling_sand/: CMakeLists.txt
examples/falling_sand/code/private/: falling_sand_example.cpp
examples/fractal/: CMakeLists.txt  compile_shaders.cmake
examples/fractal/code/private/: clipboard.hpp  clipboard_linux.cpp  clipboard_windows.cpp  fractal_app.cpp  fractal_app.hpp  fractal_example.cpp  fractal_example_main.cpp  fractal_settings.cpp  fractal_settings.hpp  graphics_utils.cpp  graphics_utils.hpp  interpolation_widget.cpp  interpolation_widget.hpp
examples/fractal/code/private/renderers/: counting_renderer.cpp  counting_renderer.hpp  fractal_renderer.hpp  simple_cpu_renderer.cpp  simple_cpu_renderer.hpp  simple_gpu_renderer.cpp  simple_gpu_renderer.hpp
examples/fractal/content/shaders/fractal_example/: counting_draw.frag  fractal.frag  fractal.shader.json  fullscreen.vert  interpolation_widget.frag  interpolation_widget.shader.json
examples/fractal/shaders/fractal/: fractal.frag  fractal.vert
examples/fractal/shaders/fractal_example/: counting_compute.comp  counting_compute.shader.json  counting_draw.shader.json  textured_quad.frag
examples/geometry_shader/: CMakeLists.txt  compile_shaders.cmake
examples/geometry_shader/code/private/: geometry_shader_example.cpp
examples/geometry_shader/content/shaders/points_to_quads_2d/: points_to_quads_2d.geom  points_to_quads_2d.vert
examples/geometry_shader/shaders/points_to_quads_2d/: points_to_quads_2d.frag
examples/painter2d/: CMakeLists.txt  klvk_painter2d_example.module.json
examples/painter2d/code/private/: painter2d_example.cpp
examples/post_processing/: CMakeLists.txt  compile_shaders.cmake
examples/post_processing/code/private/: post_processing_example.cpp
examples/post_processing/content/shaders/post_processing/: blur.frag  scene.frag
examples/post_processing/shaders/post_processing/: fullscreen.vert
examples/render_to_texture/: CMakeLists.txt  compile_shaders.cmake  klvk_render_to_texture_example.module.json
examples/render_to_texture/code/private/: render_to_texture_example.cpp
examples/render_to_texture/content/shaders/render_to_texture/: textured_quad.vert
examples/render_to_texture/shaders/render_to_texture/: color.vert  textured_quad.frag
examples/simple_lit_cube/: CMakeLists.txt  compile_shaders.cmake
examples/simple_lit_cube/code/private/: simple_lit_cube_example.cpp
examples/simple_lit_cube/content/shaders/basic_light_3d/: basic_light_3d.vert
examples/simple_lit_cube/shaders/basic_light_3d/: basic_light_3d.frag
examples/textured_quad/: CMakeLists.txt  compile_shaders.cmake
examples/textured_quad/code/private/: textured_quad_example.cpp
examples/two_textures/: CMakeLists.txt  compile_shaders.cmake
examples/two_textures/code/private/: two_textures_example.cpp
examples/two_textures/shaders/two_textures_2d/: two_textures_2d.frag  two_textures_2d.vert
imgui_vulkan/: CMakeLists.txt  imgui_vulkan.module.json
klvk/: CMakeLists.txt  compile_shaders.cmake  ffmpeg.cmake  klvk.module.json  shader_cache.cmake  vulkan_api.cmake
klvk/code/private/: application.cpp  window.cpp
klvk/code/private/camera/: camera_3d.cpp
klvk/code/private/diagnostics/: diagnostic_events.hpp  diagnostic_run_config.cpp  diagnostic_runner.cpp  diagnostic_runner.hpp  diagnostic_video_encoder.cpp  diagnostic_video_encoder.hpp  input_recorder.cpp  input_recorder.hpp
klvk/code/private/events/: event_manager.cpp
klvk/code/private/filesystem/: filesystem.cpp
klvk/code/private/math/: transform.cpp
klvk/code/private/mesh/: procedural_mesh_generator.cpp
klvk/code/private/platform/: input_mapping.cpp  input_mapping.hpp
klvk/code/private/platform/glfw/: glfw_state.cpp  glfw_state.hpp  glfw_window.cpp
klvk/code/private/platform/os/: os.cpp
klvk/code/private/rendering/: curve_renderer_2d.cpp  instanced_sprite_renderer_2d.cpp
klvk/code/private/shader/: shader.cpp  shader_cache_manager.cpp
klvk/code/private/texture/: procedural_texture_generator.cpp
klvk/code/private/timing/: timer_manager.cpp
klvk/code/private/ui/: simple_imgui_combo.cpp  type_id_widget.cpp
klvk/code/private/vulkan/: descriptor_sets.cpp  device_context.cpp  gpu_buffer.cpp  graphics_pipeline_builder.cpp  offscreen_render_target.cpp  swapchain.cpp  texture.cpp  vma_usage.cpp  vulkan_api.cpp  vulkan_common.cpp
klvk/code/public/klvk/: application.hpp  error_handling.hpp  input.hpp  window.hpp
klvk/code/public/klvk/camera/: camera_2d.hpp  camera_3d.hpp  viewport.hpp
klvk/code/public/klvk/diagnostics/: diagnostic_run_config.hpp
klvk/code/public/klvk/events/: application_events.hpp  detail.hpp  event_listener.hpp  event_listener_interface.hpp  event_listener_method.hpp  event_manager.hpp  keyboard_events.hpp  mouse_events.hpp  window_events.hpp
klvk/code/public/klvk/filesystem/: filesystem.hpp
klvk/code/public/klvk/macro/: ensure_enum_size.hpp
klvk/code/public/klvk/math/: rotator.hpp  transform.hpp
klvk/code/public/klvk/mesh/: procedural_mesh_generator.hpp
klvk/code/public/klvk/reflection/: matrix_reflect.hpp  register_types.hpp
klvk/code/public/klvk/rendering/: curve_renderer_2d.hpp  (+1 more)
klvk/shaders/klvk/: curve2d.frag  curve2d.vert  instanced_sprite.frag  instanced_sprite.vert
tests/diagnostic_config/: CMakeLists.txt
tests/diagnostic_config/code/private/: diagnostic_config_test.cpp
tests/timer_manager/: CMakeLists.txt
tests/timer_manager/code/private/: timer_manager_test.cpp
(+67 files in other folders)
