cmake_minimum_required(VERSION 3.20)
include(set_compiler_options)
set(module_source_files
    ${CMAKE_CURRENT_SOURCE_DIR}/code/private/application.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/private/camera/camera_3d.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/private/events/event_manager.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/private/filesystem/filesystem.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/private/math/transform.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/private/mesh/procedural_mesh_generator.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/private/platform/glfw/glfw_state.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/private/platform/os/os.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/private/rendering/curve_renderer_2d.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/private/rendering/instanced_sprite_renderer_2d.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/private/shader/shader.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/private/shader/shader_cache_manager.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/private/texture/procedural_texture_generator.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/private/ui/simple_imgui_combo.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/private/ui/type_id_widget.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/private/vulkan/device_context.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/private/vulkan/gpu_buffer.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/private/vulkan/graphics_pipeline_builder.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/private/vulkan/swapchain.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/private/vulkan/texture.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/private/vulkan/vma_usage.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/private/vulkan/vulkan_api.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/private/vulkan/vulkan_common.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/private/window.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/public/klvk/application.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/public/klvk/camera/camera_2d.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/public/klvk/camera/camera_3d.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/public/klvk/camera/viewport.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/public/klvk/error_handling.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/public/klvk/events/detail.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/public/klvk/events/event_listener.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/public/klvk/events/event_listener_interface.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/public/klvk/events/event_listener_method.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/public/klvk/events/event_manager.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/public/klvk/events/mouse_events.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/public/klvk/events/window_events.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/public/klvk/filesystem/filesystem.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/public/klvk/macro/ensure_enum_size.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/public/klvk/math/rotator.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/public/klvk/math/transform.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/public/klvk/mesh/procedural_mesh_generator.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/public/klvk/platform/os/os.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/public/klvk/reflection/matrix_reflect.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/public/klvk/reflection/register_types.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/public/klvk/rendering/curve_renderer_2d.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/public/klvk/rendering/instanced_sprite_renderer_2d.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/public/klvk/shader/define_handle.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/public/klvk/shader/shader.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/public/klvk/shader/shader_cache_manager.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/public/klvk/template/class_member_traits.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/public/klvk/template/constexpr_string_hash.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/public/klvk/template/get_enum_underlying.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/public/klvk/template/member_offset.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/public/klvk/template/on_scope_leave.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/public/klvk/template/tagged_id_hash.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/public/klvk/template/tuple_type_by_index.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/public/klvk/texture/procedural_texture_generator.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/public/klvk/ui/imgui_helpers.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/public/klvk/ui/imgui_value_combo.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/public/klvk/ui/simple_imgui_combo.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/public/klvk/ui/simple_type_widget.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/public/klvk/ui/type_id_widget_minimal.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/public/klvk/vulkan/detail/settings.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/public/klvk/vulkan/detail/vulkan_api_impl.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/public/klvk/vulkan/device_context.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/public/klvk/vulkan/gpu_buffer.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/public/klvk/vulkan/graphics_pipeline_builder.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/public/klvk/vulkan/swapchain.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/public/klvk/vulkan/texture.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/public/klvk/vulkan/vulkan_api.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/public/klvk/vulkan/vulkan_common.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/code/public/klvk/window.hpp)
add_library(klvk STATIC ${module_source_files})
set_generic_compiler_options(klvk PRIVATE)
target_link_libraries(klvk PUBLIC ass
                                  edt
                                  fmt
                                  CppReflection
                                  cpptrace::cpptrace
                                  expected
                                  magic_enum
                                  unordered_dense
                                  nlohmann_json
                                  glfw
                                  Vulkan-Headers
                                  volk
                                  VulkanMemoryAllocator
                                  imgui_vulkan)
target_include_directories(klvk PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/code/public)
target_include_directories(klvk PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/code/private)
include(${CMAKE_CURRENT_SOURCE_DIR}/compile_shaders.cmake)
include(${CMAKE_CURRENT_SOURCE_DIR}/shader_cache.cmake)
include(${CMAKE_CURRENT_SOURCE_DIR}/vulkan_api.cmake)
add_custom_target(klvk_copy_files ALL
    ${CMAKE_COMMAND} -E copy_directory "${CMAKE_CURRENT_SOURCE_DIR}/content" ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/content
)
add_dependencies(klvk klvk_copy_files)
