cmake_minimum_required(VERSION 3.20)
include(set_compiler_options)
set(module_source_files
    ${CMAKE_CURRENT_SOURCE_DIR}/code/private/compute_shader_example.cpp)
add_executable(klvk_compute_shader_example ${module_source_files})
set_generic_compiler_options(klvk_compute_shader_example PRIVATE)
target_link_libraries(klvk_compute_shader_example PUBLIC klvk)
target_include_directories(klvk_compute_shader_example PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/code/public)
target_include_directories(klvk_compute_shader_example PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/code/private)
include(${CMAKE_CURRENT_SOURCE_DIR}/compile_shaders.cmake)
